Fix text margins on mobile version for Web and Mobile pages

--- a/css/web-and-mobile-responsive.css
+++ b/css/web-and-mobile-responsive.css
@@ -27,10 +27,11 @@
 
   .project-description-mobile {
     width: 96%;
-    margin-left: 2%;
+    margin: 0 auto 3% 2%;
   }
 
   .project-text-box-mobile {
+    margin-top: 1%;
     width: 60%;
   }
 
@@ -48,7 +49,7 @@
     width: 8%;
     position: relative;
     float: right;
-    margin: 0 0 2% auto;
+    margin: 2% 0 2% auto;
     background-color: white;
   }
 }
